--- a/index.html
+++ b/index.html
@@ -4,70 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instructional Designer Portfolio</title>
+    <title>Tanya Colbert | Instructional Design Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <header>
-        <h1>Your Name</h1>
-        <p>Instructional Designer | Learning Experience Architect</p>
-        <nav>
+    <header class="main-header">
+        <nav class="nav">
+            <a href="#portfolio" class="portfolio-button">Portfolio</a>
             <a href="#about">About</a>
-            <a href="#portfolio">Portfolio</a>
-            <a href="#services">Services</a>
-            <a href="#resume">Resume</a>
             <a href="#contact">Contact</a>
         </nav>
+        <div class="intro">
+            <h1>Hi. I’m <span>Tanya Colbert</span>.<br>I'm in the field of Learning Experience Design.</h1>
+        </div>
+        <footer>
+            <p>© Tanya Colbert. Coded With Code in 2025.</p>
+            <div class="socials">
+                <a href="https://www.linkedin.com/in/tanya-reece-colbert-07385935/" target="_blank" aria-label="LinkedIn">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+            </div>
+        </footer>
     </header>
-
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Hello! I design effective and fun learning experiences that drive performance. I specialize in eLearning, blended learning, and instructional videos using tools like Storyline, Rise, and more.</p>
-    </section>
-
-    <section id="portfolio">
-        <h2>My Work</h2>
-        <div class="project-card">
-            <h3>Sales Onboarding for Acme Inc.</h3>
-            <p><strong>Objective:</strong> Decrease ramp-up time for new sales reps</p>
-            <p><strong>Tools:</strong> Storyline, Rise</p>
-            <p><strong>Outcome:</strong> 34% faster onboarding</p>
-        </div>
-        <div class="project-card">
-            <h3>Cybersecurity Awareness Training</h3>
-            <p><strong>Objective:</strong> Reduce phishing incidents</p>
-            <p><strong>Tools:</strong> Rise, Canva</p>
-            <p><strong>Outcome:</strong> Phishing rates dropped from 12% to 3%</p>
-        </div>
-    </section>
-
-    <section id="services">
-        <h2>Services</h2>
-        <ul>
-            <li>eLearning Development</li>
-            <li>Curriculum Design</li>
-            <li>Storyboarding</li>
-            <li>LMS Consulting</li>
-        </ul>
-    </section>
-
-    <section id="resume">
-        <h2>Resume</h2>
-        <p><a href="#">Download My Resume (PDF)</a></p>
-    </section>
-
-    <section id="contact">
-        <h2>Contact</h2>
-        <form>
-            <input type="text" placeholder="Your Name" required>
-            <input type="email" placeholder="Your Email" required>
-            <textarea placeholder="Your Message" required></textarea>
-            <button type="submit">Send</button>
-        </form>
-    </section>
-
-    <footer>
-        <p>© 2025 Your Name. All rights reserved.</p>
-    </footer>
 </body>
 </html>
