--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <header class="main-header">
         <nav class="nav">
-            <a href="#portfolio" class="portfolio-button">Portfolio</a>
-            <a href="#about">About</a>
-            <a href="#contact">Contact</a>
+            <a href="portfolio.html" class="portfolio-button">Portfolio</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
         </nav>
         <div class="intro">
             <h1>Hi. I’m <span>Tanya Colbert</span>.<br>I'm in the field of Learning Experience Design.</h1>
