--- a/index.html
+++ b/index.html
@@ -2,30 +2,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tanya Colbert | Instructional Design Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tanya Colbert | Instructional Design Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 </head>
 <body>
-    <header class="main-header">
-        <nav class="nav">
-            <a href="portfolio.html" class="portfolio-button">Portfolio</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-        <div class="intro">
-            <h1>Hi. I’m <span>Tanya Colbert</span>.<br>I'm in the field of Learning Experience Design.</h1>
-        </div>
-        <footer>
-            <p>© Tanya Colbert. Coded With Code in 2025.</p>
-            <div class="socials">
-                <a href="https://www.linkedin.com/in/tanya-reece-colbert-07385935/" target="_blank" aria-label="LinkedIn">
-                    <i class="fab fa-linkedin"></i>
-                </a>
-            </div>
-        </footer>
-    </header>
+  <header class="main-header">
+    <nav class="nav">
+      <a href="portfolio.html" class="portfolio-button">Portfolio</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+    <div class="intro">
+      <h1>Hi. I’m <span>Tanya Colbert</span>.<br />I'm in the field of Learning Experience Design.</h1>
+    </div>
+    <footer>
+      <p>© Tanya Colbert. Coded With Code in 2025.</p>
+      <div class="socials">
+        <a href="https://www.linkedin.com/in/tanya-reece-colbert-07385935/" target="_blank" aria-label="LinkedIn">
+          <i class="fab fa-linkedin"></i>
+        </a>
+      </div>
+    </footer>
+  </header>
 </body>
 </html>
