--- a/about.html
+++ b/about.html
@@ -2,48 +2,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Tanya Colbert</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About Tanya Colbert</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body>
-    <header class="main-header">
-        <nav class="nav">
-            <a href="index.html">Home</a>
-            <a href="portfolio.html" class="portfolio-button">Portfolio</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </header>
+<body style="margin:0;background:#000;">
+  <nav class="nav" style="text-align:right;padding:20px 40px;">
+    <a href="index.html" style="color:white;margin-right:20px;">Home</a>
+    <a href="portfolio.html" class="portfolio-button">Portfolio</a>
+    <a href="about.html" style="color:white;margin-left:20px;">About</a>
+    <a href="contact.html" style="color:white;margin-left:20px;">Contact</a>
+  </nav>
 
-    <section class="about-section">
-        <div class="container container-flex">
-            <div class="text-col">
-                <h2>About Me</h2>
-                <p>I'm Tanya Colbert, a seasoned Learning Experience Designer with over <strong>8 years of experience</strong> in instructional design, eLearning, and corporate training. I bring a passion for creating impactful, equitable, and engaging digital learning solutions, always aligned with strategic business outcomes and learner needs.</p>
-                <h3>✨ Tools I Love</h3>
-                <ul>
-                    <li>LMS platforms (Litmos, Docebo, Skilljar, TalentLMS)</li>
-                    <li>Articulate Rise, Mighty Extension</li>
-                    <li>Canva, Camtasia, Vyond, Synthesia, Figma</li>
-                </ul>
-                <h3>🧠 My Design Approach</h3>
-                <ul>
-                    <li>Audience-Centered Learning Journeys</li>
-                    <li>Microlearning & Scenario-Based Learning</li>
-                    <li>Performance-First Instructional Strategy</li>
-                    <li>Data-Driven Analysis & Iteration</li>
-                </ul>
-                <h3>🌟 Fun Fact</h3>
-                <p>For two years, I hosted a virtual <a href="https://www.youtube.com/playlist?list=PLNcp8fMX7Hwy3UkpO-Q3773Ah1sDoiBqZ" target="_blank">Coffee Talk</a> channel, where I engaged with industry professionals to explore learning trends, share insights, and spotlight innovation in L&D. It was as enriching as it was energizing!</p>
-            </div>
-            <div class="image-col">
-                <div class="image-wrapper">
-                    <img src="tanya_colbert_photo.png" alt="Tanya Colbert" class="profile-photo">
-                </div>
-            </div>
+  <section class="about-section" style="padding:40px 20px;display:block;background:#000;">
+    <div class="container-flex" style="max-width:900px;margin:0 auto;background:#E8FC94;padding:50px;border-radius:16px;box-shadow:0 10px 25px rgba(0,0,0,0.25);display:flex;gap:40px;flex-wrap:wrap;">
+      <div class="text-col" style="flex:2;color:#121212;">
+        <h2 style="margin-top:0;">About Me</h2>
+        <p>I'm Tanya Colbert, a seasoned Learning Experience Designer with over <strong>8 years of experience</strong> in instructional design, eLearning, and corporate training. I bring a passion for creating impactful, equitable, and engaging digital learning solutions, always aligned with strategic business outcomes and learner needs.</p>
+        <h3>✨ Tools I Love</h3>
+        <ul>
+          <li>LMS platforms (Litmos, Docebo, Skilljar, TalentLMS)</li>
+          <li>Articulate Rise, Mighty Extension</li>
+          <li>Canva, Camtasia, Vyond, Synthesia, Figma</li>
+        </ul>
+        <h3>🧠 My Design Approach</h3>
+        <ul>
+          <li>Audience-Centered Learning Journeys</li>
+          <li>Microlearning & Scenario-Based Learning</li>
+          <li>Performance-First Instructional Strategy</li>
+          <li>Data-Driven Analysis & Iteration</li>
+        </ul>
+        <h3>🌟 Fun Fact</h3>
+        <p>For two years, I hosted a virtual <a href="https://www.youtube.com/playlist?list=PLNcp8fMX7Hwy3UkpO-Q3773Ah1sDoiBqZ" target="_blank">Coffee Talk</a> channel, where I engaged with industry professionals to explore learning trends, share insights, and spotlight innovation in L&D. It was as enriching as it was energizing!</p>
+      </div>
+      <div class="image-col" style="flex:1;display:flex;justify-content:center;">
+        <div style="background:#4FC3B3;padding:20px;border-radius:12px;box-shadow:0 8px 16px rgba(0,0,0,0.2);max-width:300px;">
+          <img src="tanya_colbert_photo.png" alt="Tanya Colbert" style="width:100%;border-radius:8px;" />
         </div>
-    </section>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
