--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,39 @@
         </div>
       </div>
 
-      <!-- Repeatable Tiles could be added here -->
+      
+      <div class="portfolio-card">
+        <div class="card-header">
+          <h2>Scenario-Based Learning</h2>
+          <p class="project-type">Scenario</p>
+        </div>
+        <div class="card-thumbnail">
+          <img src="https://via.placeholder.com/300x180" alt="Scenario project" />
+        </div>
+        <button class="toggle-button">View Details</button>
+        <div class="card-content">
+          <p><strong>Description:</strong> An interactive branching scenario for decision-making training.</p>
+          <p><strong>Tools Used:</strong> Articulate Rise, Camtasia</p>
+          <p><strong>Learning Objectives:</strong> Apply decision strategies in customer interactions.</p>
+        </div>
+      </div>
+
+      <div class="portfolio-card">
+        <div class="card-header">
+          <h2>Microlearning Video</h2>
+          <p class="project-type">Microlearning</p>
+        </div>
+        <div class="card-thumbnail">
+          <img src="https://via.placeholder.com/300x180" alt="Microlearning project" />
+        </div>
+        <button class="toggle-button">View Details</button>
+        <div class="card-content">
+          <p><strong>Description:</strong> A short, engaging explainer video for onboarding.</p>
+          <p><strong>Tools Used:</strong> Vyond, Canva</p>
+          <p><strong>Learning Objectives:</strong> Recognize company values and navigate key systems.</p>
+        </div>
+      </div>
+    
     </div>
   </section>
 </body>
