--- a/index.html
+++ b/index.html
@@ -38,17 +38,25 @@
             <!-- Project 1 -->
             <div class="portfolio-card">
                 <div class="card-header">
-                    <h2>Project Title</h2>
-                    <p class="project-type">Microlearning</p>
+                    <h2>Certification Workbook</h2>
+                    <p class="project-type">VLT, ILT</p>
                 </div>
                 <div class="card-thumbnail">
-                    <img src="https://via.placeholder.com/300x180/696EFE/FFFFFF?text=Project+Preview" alt="Project preview" />
+                    <img src="https://via.placeholder.com/300x180/696EFE/FFFFFF?text=Certification+Workbook" alt="Certification Workbook Preview" />
                 </div>
                 <button class="toggle-button">View Details</button>
                 <div class="card-content">
-                    <p><strong>Description:</strong> A brief overview of the learning solution and its goals.</p>
-                    <p><strong>Tools Used:</strong> Articulate Rise, Canva, Vyond</p>
-                    <p><strong>Learning Objectives:</strong> Learners will be able to identify key concepts and apply them in their role.</p>
+                    <p><strong>Description:</strong> This front desk certification program was developed to train spa and salon staff on maximizing revenue through the Meevo software platform, transforming basic appointment schedulers into strategic revenue generators. The program solves the problem of missed sales opportunities and inconsistent client experiences by providing structured training on booking optimization, client retention strategies, and systematic processes that drive measurable business growth.</p>
+                    <p><strong>Duration:</strong> 4 hours</p>
+                    <p><strong>Tools Used:</strong> InDesign, Adobe Acrobat, SnagIt</p>
+                    <p><strong>Learning Objectives:</strong> After completing this training, learners will be able to:</p>
+                    <ul style="margin-left: 20px; color: #333333;">
+                        <li><strong>Maximize Revenue</strong> - Use proven scripts and strategies to increase sales through add-ons, retail, and upselling techniques</li>
+                        <li><strong>Drive Client Retention</strong> - Execute rebooking processes and relationship-building to achieve 50%+ new client and 85%+ repeat client retention rates</li>
+                        <li><strong>Master Meevo Software</strong> - Navigate advanced booking tools, reporting systems, and automation features to optimize schedule productivity</li>
+                        <li><strong>Monitor KPIs</strong> - Track and improve six key growth indicators that drive spa/salon business success through data-driven insights</li>
+                    </ul>
+                    <p><strong>View Project:</strong> <a href="https://drive.google.com/file/d/1iM43nAbBgnVjSmUyBDr3DsWphMqcPjMt/view?usp=sharing" target="_blank" style="color: #696EFE; text-decoration: none;">Access Certification Workbook</a></p>
                 </div>
             </div>
 
