--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <p class="project-type">VLT, ILT</p>
                 </div>
                 <div class="card-thumbnail">
-                    <img src="https://via.placeholder.com/300x180/696EFE/FFFFFF?text=Certification+Workbook" alt="Certification Workbook Preview" />
+                    <img src="certification-workbook.png" alt="Certification Workbook Preview" />
                 </div>
                 <button class="toggle-button">View Details</button>
                 <div class="card-content">
