--- a/index.html
+++ b/index.html
@@ -63,17 +63,18 @@
             <!-- Project 2 -->
             <div class="portfolio-card">
                 <div class="card-header">
-                    <h2>Scenario-Based Learning</h2>
-                    <p class="project-type">Scenario</p>
+                    <h2>GRIN Academy</h2>
+                    <p class="project-type">LMS Launch (Skilljar)</p>
                 </div>
                 <div class="card-thumbnail">
-                    <img src="https://via.placeholder.com/300x180/4FC3B3/FFFFFF?text=Scenario+Project" alt="Scenario project" />
+                    <img src="Skilljar-Launch.png" alt="GRIN Academy LMS Preview" />
                 </div>
                 <button class="toggle-button">View Details</button>
                 <div class="card-content">
-                    <p><strong>Description:</strong> An interactive branching scenario for decision-making training.</p>
-                    <p><strong>Tools Used:</strong> Articulate Rise, Camtasia</p>
-                    <p><strong>Learning Objectives:</strong> Apply decision strategies in customer interactions.</p>
+                    <p><strong>Description:</strong> Launched a comprehensive learning management system (LMS) in less than 90 days to streamline client onboarding for GRIN's influencer marketing platform. The solution addressed the challenge of complex platform adoption by creating an integrated learning environment featuring structured onboarding modules, a creator resource hub, and a tech lounge with 1-2 minute FAQ videos, enabling clients to quickly master GRIN's tools and accelerate their influencer marketing success.</p>
+                    <p><strong>Target Audience:</strong> All GRIN customers</p>
+                    <p><strong>Tools Used:</strong> Skilljar, Camtasia, Canva, Synthesia, InDesign, ElevenLabs, SnagIt, Zoom Webinar, IORAD, Vyond</p>
+                    <p><strong>View Project:</strong> <a href="https://academy.grin.co/" target="_blank">Visit GRIN Academy</a></p>
                 </div>
             </div>
 
